# ovos-shell

./: .gitignore  CMakeLists.txt  Qt5Alias.cmake  README.md  dev_setup.sh
application/: CMakeLists.txt  ListenerAnimation.qml  StatusIndicator.qml  ai.mycroft.embedded-shell.desktop  appsettings.cpp  appsettings.h  main.cpp  qml.qrc  qtquickcontrols2.conf
application/qml/: Keyboard.qml  NotificationPopSticky.qml  NotificationPopTransient.qml  NotificationsSystem.qml  OAuthLoader.qml  PairingArea.qml  ServiceWatcher.qml  ShutdownOptions.qml  SplashScreen.qml  TermLoader.qml  main.qml
application/qml/osd/: VolumeOSD.qml
application/qml/panel/: SlidingArea.qml  SlidingPanel.qml
application/qml/panel/quicksettings/: AdditionalSettingsDelegate.qml  BrightnessSlider.qml  Delegate.qml  HomeDelegate.qml  MuteDelegate.qml  QuickSettings.qml  RebootDelegate.qml  RotationDelegate.qml  ShutdownDelegate.qml  SliderBase.qml  VolumeSlider.qml  WirelessDelegate.qml
lib/: CMakeLists.txt  configuration.cpp  configuration.h  openvoiceshellplugin.cpp  placesmodel.cpp  placesmodel.h  plugins.qmltypes
schemes/: CMakeLists.txt  ovos_scheme.json  ruby_scheme.json
theme/: CMakeLists.txt  kirigamiplasmafactory_kf.h.in  ovostheme.cpp  ovostheme.h  ovostheme_kf.h.in  ovostheme_kf_legacy.h.in
theme-legacy/: ovostheme.cpp  ovostheme.h
